--- a/viper/Screens/Main/Cells/MainTableViewCell.xib
+++ b/viper/Screens/Main/Cells/MainTableViewCell.xib
@@ -10,24 +10,28 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="MainTableViewCell" customModule="viper" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MainTableViewCell" rowHeight="120" id="KGk-i7-Jjw" customClass="MainTableViewCell" customModule="viper" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wzy-fa-lUl">
-                        <rect key="frame" x="8" y="8" width="42" height="20.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wzy-fa-lUl">
+                        <rect key="frame" x="8" y="8" width="224" height="0.0"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0Gl-qf-nZO">
                         <rect key="frame" x="240" y="0.0" width="80" height="80"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="80" id="bPS-h5-udi"/>
+                            <constraint firstAttribute="height" constant="80" id="f25-p8-fDk"/>
+                        </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D4K-2x-q20">
-                        <rect key="frame" x="8" y="39" width="42" height="20.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D4K-2x-q20">
+                        <rect key="frame" x="8" y="18.5" width="224" height="0.0"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -37,6 +41,8 @@
                     <constraint firstItem="0Gl-qf-nZO" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="240" id="1be-E7-w9W"/>
                     <constraint firstAttribute="bottom" secondItem="0Gl-qf-nZO" secondAttribute="bottom" id="8f8-46-rbH"/>
                     <constraint firstItem="D4K-2x-q20" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="8qZ-0O-3uS"/>
+                    <constraint firstItem="0Gl-qf-nZO" firstAttribute="leading" secondItem="Wzy-fa-lUl" secondAttribute="trailing" constant="8" id="ACC-Iz-gv8"/>
+                    <constraint firstItem="0Gl-qf-nZO" firstAttribute="leading" secondItem="D4K-2x-q20" secondAttribute="trailing" constant="8" id="BYl-LN-sdT"/>
                     <constraint firstItem="D4K-2x-q20" firstAttribute="top" secondItem="Wzy-fa-lUl" secondAttribute="bottom" constant="10.5" id="Fkm-eD-NZu"/>
                     <constraint firstItem="Wzy-fa-lUl" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="LNd-7t-NJc"/>
                     <constraint firstItem="Wzy-fa-lUl" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="TaA-Sp-Si7"/>
@@ -47,9 +53,9 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="description" destination="D4K-2x-q20" id="THP-Gh-dBM"/>
-                <outlet property="image" destination="0Gl-qf-nZO" id="Moi-sK-zZ6"/>
-                <outlet property="title" destination="Wzy-fa-lUl" id="6vP-RZ-kfo"/>
+                <outlet property="descriptionLabel" destination="D4K-2x-q20" id="QAR-ZA-KLn"/>
+                <outlet property="thumbnailImage" destination="0Gl-qf-nZO" id="EfS-S7-ttI"/>
+                <outlet property="titleLabel" destination="Wzy-fa-lUl" id="XpJ-he-Cye"/>
             </connections>
             <point key="canvasLocation" x="-46.376811594202906" y="125.89285714285714"/>
         </tableViewCell>
