--- a/viper/Screens/Main/Cells/MainTableViewCell.xib
+++ b/viper/Screens/Main/Cells/MainTableViewCell.xib
@@ -10,45 +10,45 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MainTableViewCell" rowHeight="120" id="KGk-i7-Jjw" customClass="MainTableViewCell" customModule="viper" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MainTableViewCell" rowHeight="140" id="KGk-i7-Jjw" customClass="MainTableViewCell" customModule="viper" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wzy-fa-lUl">
-                        <rect key="frame" x="8" y="8" width="224" height="0.0"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0Gl-qf-nZO">
+                        <rect key="frame" x="208" y="8" width="104" height="104"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="104" id="bPS-h5-udi"/>
+                            <constraint firstAttribute="height" constant="104" id="f25-p8-fDk"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D4K-2x-q20">
+                        <rect key="frame" x="8" y="16" width="192" height="96"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0Gl-qf-nZO">
-                        <rect key="frame" x="240" y="0.0" width="80" height="80"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="80" id="bPS-h5-udi"/>
-                            <constraint firstAttribute="height" constant="80" id="f25-p8-fDk"/>
-                        </constraints>
-                    </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D4K-2x-q20">
-                        <rect key="frame" x="8" y="18.5" width="224" height="0.0"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wzy-fa-lUl">
+                        <rect key="frame" x="8" y="8" width="192" height="0.0"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="0Gl-qf-nZO" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="240" id="1be-E7-w9W"/>
-                    <constraint firstAttribute="bottom" secondItem="0Gl-qf-nZO" secondAttribute="bottom" id="8f8-46-rbH"/>
-                    <constraint firstItem="D4K-2x-q20" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="8qZ-0O-3uS"/>
-                    <constraint firstItem="0Gl-qf-nZO" firstAttribute="leading" secondItem="Wzy-fa-lUl" secondAttribute="trailing" constant="8" id="ACC-Iz-gv8"/>
-                    <constraint firstItem="0Gl-qf-nZO" firstAttribute="leading" secondItem="D4K-2x-q20" secondAttribute="trailing" constant="8" id="BYl-LN-sdT"/>
-                    <constraint firstItem="D4K-2x-q20" firstAttribute="top" secondItem="Wzy-fa-lUl" secondAttribute="bottom" constant="10.5" id="Fkm-eD-NZu"/>
-                    <constraint firstItem="Wzy-fa-lUl" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="LNd-7t-NJc"/>
-                    <constraint firstItem="Wzy-fa-lUl" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="TaA-Sp-Si7"/>
-                    <constraint firstAttribute="trailing" secondItem="0Gl-qf-nZO" secondAttribute="trailing" id="b1I-ym-sDN"/>
-                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="D4K-2x-q20" secondAttribute="bottom" constant="8" id="xec-2x-fDG"/>
-                    <constraint firstItem="0Gl-qf-nZO" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="yd5-cF-jbc"/>
+                    <constraint firstItem="Wzy-fa-lUl" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="0kg-ks-fhc"/>
+                    <constraint firstItem="D4K-2x-q20" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="6cg-wp-iaS"/>
+                    <constraint firstItem="0Gl-qf-nZO" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="208" id="C4N-fD-luQ"/>
+                    <constraint firstAttribute="bottom" secondItem="D4K-2x-q20" secondAttribute="bottom" constant="8" id="EKX-mu-jMB"/>
+                    <constraint firstItem="Wzy-fa-lUl" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="G1t-O1-Hmo"/>
+                    <constraint firstItem="0Gl-qf-nZO" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="NAf-w1-fck"/>
+                    <constraint firstItem="0Gl-qf-nZO" firstAttribute="leading" secondItem="D4K-2x-q20" secondAttribute="trailing" constant="8" id="WP4-rd-glR"/>
+                    <constraint firstAttribute="trailing" secondItem="0Gl-qf-nZO" secondAttribute="trailing" constant="8" id="axR-kf-Odg"/>
+                    <constraint firstItem="0Gl-qf-nZO" firstAttribute="leading" secondItem="Wzy-fa-lUl" secondAttribute="trailing" constant="8" id="hRB-Pz-gDe"/>
+                    <constraint firstItem="D4K-2x-q20" firstAttribute="top" secondItem="Wzy-fa-lUl" secondAttribute="bottom" constant="8" id="mjw-GW-Lbr"/>
+                    <constraint firstAttribute="bottom" secondItem="0Gl-qf-nZO" secondAttribute="bottom" constant="8" id="q1Y-lX-E1O"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
